		 being called once for the complete collection. This allows individual items to be decorated while
		 skipping others.
		-[Extensions] The extension methods Register(this Container, Type service, Type implementation) and 
		 RegisterSingle(this Container, Type service, Type implementation) now allow supplying the same type
		 for service and implementation, which registers the type by itself.

	Bug fixes:
		-[Core] Container did not self-register when created with Container(ContainerOptions) ctor.
		 (work item 18139)
		-[LifetimeScoping] Dispose was called multiple times on instances, for each time they were resolved.
		 (work item 18268)
		 -[Extensions] RegisterAll did not allow registering a service type that equaled the registered
		 service type, for instance container.RegisterAll<IService>(new[] { typeof(IService) }) failed.
		-[Extensions] Conditional decoration (using the Predicate<DecoratorPredicateContext>) fixed for
		 decorating items in collections. The predicate was not checked on collections.
		-[Extensions] The IEnumerable<ServiceType> was supplied to the Predicate<DecoratorPredicateContext>
		 through the ServiceType property, instead of the service type itself when decorating collections.


Version 1.4.2.12141 (v1.4.2 RTM) 2012-05-20
	Bug fixes:
		-There was a bug in the SimpleInjector.Extensions.LifetimeScoping.dll, which made it impossible to
		 register instances (with a different lifestyle than Lifetime Scope) for disposal, when no services
		 where registered with the Lifetime Scope lifestyle.


Version 1.4.2.12140 (v1.4.2 RTM) 2012-05-19
	General description:
		The extensions project now contains 'RegisterDecorator' extension methods that replace the old
		'RegisterOpenGenericDecorator' extension methods. The new methods allow registering both generic and
		non-generic decorators. Integration projects have been added to the solution, which should make it
		easier to integrate Simple Injector with ASP.NET.

	Project Changes: