@@ -531,9 +531,10 @@ namespace SimpleInjector.Extensions
             Requires.IsNotNull(container, "container");
             Requires.IsNotNull(serviceType, "serviceType");
             Requires.IsNotNull(decoratorType, "decoratorType");
+            Requires.ServiceTypeIsNotClosedWhenImplementationIsOpen(serviceType, decoratorType);
             Requires.ServiceIsAssignableFromImplementation(serviceType, decoratorType, "serviceType");
             Requires.DecoratorHasSelectableConstructor(container, serviceType, decoratorType, "decoratorType");
-            Requires.DecoratorHasConstructorThatContainsServiceTypeAsArgument(container, serviceType, 
+            Requires.DecoratorHasConstructorThatContainsServiceTypeAsArgument(container, serviceType,
                 decoratorType, "decoratorType");
             Requires.DecoratorIsNotAnOpenGenericTypeDefinitionWhenTheServiceTypeIsNot(serviceType,
                 decoratorType, "decoratorType");
